[package]
name = "learned-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
ptr_hash_fixed = { path = "ptr_hash_patched" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[example]]
name = "basic_usage"

[[example]]
name = "cache_analysis"

[[bench]]
name = "kv_store_bench"
harness = false

[profile.release]
debug = true