[package]
name = "learned-kv"
version = "0.1.0"
edition = "2021"

[dependencies]
ptr_hash_fixed = { path = "ptr_hash_patched" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"
crc32fast = "1.4"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "verified_store_bench"
harness = false

[[example]]
name = "basic_usage"

[[example]]
name = "cache_analysis"

[[example]]
name = "component_analysis"

[[example]]
name = "ultra_strict_verification"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"